--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav>
       <ul>
         <li><a href="#">Головна</a></li>
-        <li><a href="#">Про нас</a></li>
+        <li><a href="#">Історія</a></li>
+         <li><a href="#">Досягнення</a></li>
         <li><a href="#">Контакти</a></li>
       </ul>
     </nav>
